# oogeso

./: .bandit  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CHANGES.txt  Dockerfile  LICENSE  LICENSE.md  MANIFEST.in  README.md  TODO.txt  changelog.html  data_example.xlsx  data_example2.xlsx  data_network.xlsx  environment.yml  genindex.html  index.html  input_data.html  input_data_carriers.html  input_data_devices.html  input_data_multienergy.html  input_data_networks.html  licence.txt  multicarrier.py  multicarrier_example1.py  objects.inv  output_data.html  plots.py  pyproject.toml  run_example.py  run_example2.py  run_single_step.py  search.html  searchindex.js  setup.py  test case.ipynb  userguide.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml  cbc-optimizer-ci.yml  ci-tests.yml  dockerhub.yml  docs.yml  oogeso.yml  publish.yml  release.yml
_sources/: changelog.md  changelog.md.txt  index.md.txt  input_data.md  input_data_multienergy.md  input_data_multienergy.md.txt  output_data.md.txt
core/: __init__.py  milp_compute.py  version.py
doc/: oogeso_manual.tex
docs/: changelog.md  conf.py  index.md  input_data.md  input_data_carriers.md  input_data_devices.md  input_data_multienergy.md  input_data_networks.md  oogeso_manual.tex  pyproject.toml  userguide.md  userguide_inputdata.md  userguide_inputdata_multienergy.md  userguide_outputdata.md
dto/: __init__.py  power_transfer_optimization_data_objects.py
examples/: Example2.ipynb  Example2b.ipynb  TestPlatform.ipynb  data_example.xlsx  data_example2.xlsx  data_test2.xlsx  energysystem.json  example_P1_powerdistribution.ipynb  example_P1_powerdistribution.yaml  leogo_reference_platform.ipynb  leogo_reference_platform.yaml  run_example2.py  run_simplecase.py  simplecase.xlsx  skjold.ipynb  skjold.yaml  test case.ipynb  test case1.ipynb  test case2 profiles.xlsx  test case2.ipynb  test case2.yaml  test_case1.ipynb  test_case2.ipynb  testcase2_profiles_forecasts.csv  testcase2_profiles_nowcasts.csv  testcase2_resultobject.json  testdata1_result.json  testdata_case.ipynb  testplatform.yaml  testplatform_profiles.xlsx  testplatform_profiles_forecasts.csv  testplatform_profiles_nowcasts.csv
examples/result/: caseBase.pkl  case_ir_offshore_pv_diesel.pkl
io/: file_io.py
ogeso/: helper_compute.py  multicarrier.py  plots.py  redundant_elpowerbalance.txt
oogeso/: dashboard.py  electricalsystem.py  file_io.py  milp_compute.py  milp_definition.py  milp_plot.py  multicarrier.py  plots.py  version.py
oogeso/tests/: test2.py
plotting_utils/: plots.py
src/oogeso/: __init__.py  file_io.py  helper_compute.py  milp_definition.py  multicarrier.py  plots.py  result_analysis.py
src/oogeso/core/: __init__.py  dashboard.py  electricalsystem.py  milp_compute.py  milp_definition.py  milp_plot.py  multicarrier.py  optimiser.py  simulator.py  util.py  version.py
src/oogeso/core/devices/: __init__.py  base.py  carbon_capture.py  compressor.py  device.py  dieselgenerator.py  dieselheater.py  electrolyser.py  fuelcell.py  gasheater.py  gasturbine.py  heatpump.py  pump.py  separator.py  sink.py  source.py  storage.py  well.py
src/oogeso/core/networks/: __init__.py  edge.py  electricalsystem.py  electricity.py  energycarriers.py  network.py  network_edge.py  network_edge_energy.py  network_edge_fluid.py  network_node.py  pipelines.py
src/oogeso/dto/: __init__.py  base.py  carriers.py  devices.py  edges.py  mapper.py  oogeso_input_data_objects.py  oogeso_input_data_objects_multienergy.py  oogeso_output_data_objects.py  oogeso_subset.py  power_transfer_optimization_data_objects.py  serialisation.py  types.py
src/oogeso/io/: __init__.py  file_io.py
src/oogeso/plots/: __init__.py  optimization_plots.py  plot_network.py  plots.py
src/oogeso/plotting_utils/: plots.py
src/oogeso/utils/: __init__.py  util.py
tests/: conftest.py  filename_actual.parquet  filename_forecast.parquet  filename_nowcast.parquet  leogo_profiles_forecasts.csv  leogo_resultobject.json  test2.py  test_carboncapture.py  test_cbc.py  test_devices_constraints.py  test_devices_create.py  test_dto.py  test_dummy.py  test_electricalsystem.py  test_gaslinepack.py  test_gasturbine_hydrogen.py  test_hydrogenstorage.py  test_io.py  test_optimisation_model.py  test_pipelines.py  test_plots.py  test_plotting.py  test_powersource_create.py  test_simulator.py  test_testcase.py  testcase2_profiles_forecasts.csv
tests/test_data/: LYR_load.csv  LYR_solar_supply.csv  cap_factors_1hr_ir.csv  cap_factors_1hr_ir_log.csv  cap_factors_1hr_lh.csv  geothermal_supply_1hr.csv  h2_storage_target.csv  leogo_profiles_nowcasts.csv  leogo_reference_platform.yaml  leogo_resultobject.json  longyearbyen_test.yaml  longyearbyen_test_2.yaml  merged_profiles.csv  profiles_br_fully_renewable_2018.csv  profiles_br_offshore_pv_diesel.csv  profiles_br_offshore_pv_diesel_2018.csv  profiles_diesel_battery.csv  profiles_diesel_battery_2018.csv  profiles_diesel_battery_pv_2018.csv  profiles_diesel_battery_pv_eb_geo_2018.csv  profiles_ir_fully_renewable_2018.csv  profiles_ir_offshore_full_2018.csv  profiles_ir_offshore_pv.csv  profiles_merged.csv  pv_h2_test.yaml  test_alldevices.yaml  testcase2_inputdata.yaml  testcase2_resultobject.json  testdata1.yaml  testdata1_resultobject.json  testdata_carboncapture.yaml  testdata_gas_line_pack.yaml  testdata_gasturbine_hydrogen.yaml  testdata_hydrogen_storage.yaml  wind_h2_test.yaml  wind_pv_h2_test.yaml
