[tool.poetry]
name = "oogeso"
version = "1.3.1"
description = "Offshore Oil and Gas Field Energy System Operational Optimisation (OOGESO)"
authors = ["Harald Svendsen <harald.svendsen@sintef.no>"]
license = "MIT License (http://opensource.org/licenses/MIT)"
readme = "README.md"
homepage = "https://github.com/oogeso/oogeso"
repository = "https://github.com/oogeso/oogeso"
classifiers=[
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
networkx = "^2.8"
numpy = "^1.26"
pandas = "^2.2"
pydot = "^2.0"
PyYAML = "^6.0"
Pyomo = "^6.7"
scipy = "^1.9"
tqdm = "^4.62"
xlrd = "^2"
matplotlib = {version = "^3.6", optional = true}
plotly = {version = "^5.11", optional = true}
seaborn = {version = "^0.12", optional = true}
ipywidgets = {version = "^8", optional = true}
ipython = {version = "^8", optional = true}
pydantic = "^1.9"
fastparquet = "^2024"
webencodings = "^0.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
nbmake = "^1.3"
setuptools = "^65.6"
mypy = "^1.3"
pylint = "^2.15"
black = "^24.4"

[tool.poetry.extras]
plotting = ["matplotlib","seaborn", "plotly","ipywidgets","ipython"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 120
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3
