[tool.poetry]
name = "docs"
version = "0.1.0"
description = "Oogeso documentation"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Sphinx = "^4.4.0"
myst-parser = "^0.16.1"
sphinx-book-theme = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
