[tool.poetry]
name = "docs"
version = "0.1.0"
description = "Oogeso documentation"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Sphinx = "^7.2"
myst-parser = "^2.0"
sphinx-book-theme = "^1.1"
linkify-it-py = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
